--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Webbisovellus</title>
 </head>
 <body>
-<p>"Tiedosto jaettavaksi"</p>
+  <h1>Mun webbisovellus</h1>
+  <p>sivu ladattu expressistä</p>
 </body>
 </html>
