--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
   <h1>Mun webbisovellus</h1>
-  <p>sivu ladattu expressistä</p>
+  <p>
+      HTML sivu ladattu expressistä <br>
+      kuva osoitteessa: http://localhost:3000/public/myimage.jpg
+  </p>
 </body>
 </html>
